[package]
name = "showme"
version = "0.1.0"
authors = ["Panda Foss <maxi.fg13@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/PandaFoss/showme"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ansi_term = "0.12.1"
